refactor so it all uses same name with database and backend and frontend
