# server/dataaccess/MyDbContext/MyDbContext.cs
@@ -12,42 +12,24 @@ public partial class MyDbContext : DbContext
     {
     }
 
-    public virtual DbSet<Redlightgreenlightscore> Redlightgreenlightscores { get; set; }
+    public virtual DbSet<Birdiesaysscore> Birdiesaysscores { get; set; }
 
-    public virtual DbSet<Simonsaysscore> Simonsaysscores { get; set; }
+    public virtual DbSet<Redbirdgreenbirdscore> Redbirdgreenbirdscores { get; set; }
 
-    public virtual DbSet<Whackamolescore> Whackamolescores { get; set; }
+    public virtual DbSet<Whackabirdscore> Whackabirdscores { get; set; }
 
     protected override void OnModelCreating(ModelBuilder modelBuilder)
     {
-        modelBuilder.Entity<Redlightgreenlightscore>(entity =>
+        modelBuilder.Entity<Birdiesaysscore>(entity =>
         {
-            entity.HasKey(e => e.Id).HasName("redlightgreenlightscores_pkey");
+            entity.HasKey(e => e.Id).HasName("birdiesaysscores_pkey");
 
-            entity.ToTable("redlightgreenlightscores", "gameconsole");
-
-            entity.HasIndex(e => e.Score, "idx_redlight_score").IsDescending();
-
-            entity.Property(e => e.Id)
-                .HasDefaultValueSql("nextval('redlightgreenlightscores_id_seq'::regclass)")
-                .HasColumnName("id");
-            entity.Property(e => e.CreatedAt)
-                .HasDefaultValueSql("CURRENT_TIMESTAMP")
-                .HasColumnName("created_at");
-            entity.Property(e => e.PlayerName).HasColumnName("player_name");
-            entity.Property(e => e.Score).HasColumnName("score");
-        });
-
-        modelBuilder.Entity<Simonsaysscore>(entity =>
-        {
-            entity.HasKey(e => e.Id).HasName("simonsaysscores_pkey");
-
-            entity.ToTable("simonsaysscores", "gameconsole");
+            entity.ToTable("birdiesaysscores", "gameconsole");
 
             entity.HasIndex(e => e.Score, "idx_simon_score").IsDescending();
 
             entity.Property(e => e.Id)
-                .HasDefaultValueSql("nextval('simonsaysscores_id_seq'::regclass)")
+                .HasDefaultValueSql("nextval('birdiesaysscores_id_seq'::regclass)")
                 .HasColumnName("id");
             entity.Property(e => e.CreatedAt)
                 .HasDefaultValueSql("CURRENT_TIMESTAMP")
@@ -56,16 +38,34 @@ public partial class MyDbContext : DbContext
             entity.Property(e => e.Score).HasColumnName("score");
         });
 
-        modelBuilder.Entity<Whackamolescore>(entity =>
+        modelBuilder.Entity<Redbirdgreenbirdscore>(entity =>
         {
-            entity.HasKey(e => e.Id).HasName("whackamolescores_pkey");
+            entity.HasKey(e => e.Id).HasName("redbirdgreenbirdscores_pkey");
 
-            entity.ToTable("whackamolescores", "gameconsole");
+            entity.ToTable("redbirdgreenbirdscores", "gameconsole");
+
+            entity.HasIndex(e => e.Score, "idx_redlight_score").IsDescending();
+
+            entity.Property(e => e.Id)
+                .HasDefaultValueSql("nextval('redbirdgreenbirdscores_id_seq'::regclass)")
+                .HasColumnName("id");
+            entity.Property(e => e.CreatedAt)
+                .HasDefaultValueSql("CURRENT_TIMESTAMP")
+                .HasColumnName("created_at");
+            entity.Property(e => e.PlayerName).HasColumnName("player_name");
+            entity.Property(e => e.Score).HasColumnName("score");
+        });
+
+        modelBuilder.Entity<Whackabirdscore>(entity =>
+        {
+            entity.HasKey(e => e.Id).HasName("whackabirdscores_pkey");
+
+            entity.ToTable("whackabirdscores", "gameconsole");
 
             entity.HasIndex(e => e.Score, "idx_whack_score").IsDescending();
 
             entity.Property(e => e.Id)
-                .HasDefaultValueSql("nextval('whackamolescores_id_seq'::regclass)")
+                .HasDefaultValueSql("nextval('whackabirdscores_id_seq'::regclass)")
                 .HasColumnName("id");
             entity.Property(e => e.CreatedAt)
                 .HasDefaultValueSql("CURRENT_TIMESTAMP")
